TFS141(SCR14893) - Historical Dashboard Custom Paging; Added horizontal/vertical scrollbar back through out the site; Changed back to IE run IE7 mode; Fixed Created Date display issue; Centered grid view headers; Added padding to the left of the pages through out the site; Code cleanup.
git-tfs-id: [https://tfs.omnicloud.local/tfs/cco%20program/]$/eCoaching_V2;C32514

--- a/Code/Web Development/eCoaching/Styles/Site.css
+++ b/Code/Web Development/eCoaching/Styles/Site.css
@@ -11,11 +11,10 @@ body
     font-family: Calibri;
     font-size: 10pt;
     margin: 0px;
-    padding: 0px;
+    padding: 10px;
     color: #000000;
     border: none;
     height: 100%;
-    overflow: hidden;
 }
 
 .formButton
@@ -433,9 +432,20 @@ div.hideSkiplink
     left: 35px;
 }
 
-.ajax__tab_xp .ajax__tab_body
+/*.ajax__tab_xp .ajax__tab_body
 {
     border-style: none !important;
+}*/
+
+th
+{
+    text-align: center;
+}
+
+td 
+{
+    padding-right: 4px;
+    padding-left: 4px;
 }
 
 
